# Atelier

./: .dockerignore  .gitignore  .lighthouserc.json  .lintstagedrc.json  .tool-versions  CLAUDE.md  DEPLOY-NOTES.md  README.md  SECRETS.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.base.json  turbo.json  vercel.json  vitest.config.ts
apps/api/: .env.example  Dockerfile  README.md  conftest.py  inngest_config.py  main.py  pyproject.toml  pytest.ini
apps/api/atelier_api/: __init__.py
apps/api/src/: __init__.py  dependencies.py  health.py  rate_limit.py  storage_signing.py
apps/api/src/_generated/: __init__.py  openapi_models.py
apps/api/src/audit/: __init__.py  middleware.py  writer.py
apps/api/src/auth/: __init__.py  bridge_token.py
apps/api/src/cron/: __init__.py  inngest_handlers.py  scheduler.py
apps/api/src/db/: __init__.py  base.py  session.py
apps/api/src/email/: __init__.py  sender.py
apps/api/src/email/templates/: __init__.py
apps/api/src/embeddings/: __init__.py  voyage.py
apps/api/src/graph/: __init__.py  workflows.py
apps/api/src/llm/: __init__.py  anthropic.py  batch.py  caching.py  client.py  compress.py  openai.py
apps/api/src/mcp/: __init__.py  server.py  tools.py
apps/api/src/observability/: __init__.py  sentry.py
apps/api/src/routes/: __init__.py
apps/api/src/routes/admin/: __init__.py
apps/api/src/routes/admin_knowledge/: __init__.py
apps/api/src/routes/ai_employees/: __init__.py
apps/api/src/routes/approvals/: __init__.py
apps/api/src/routes/auth/: __init__.py
apps/api/src/routes/byok_keys/: __init__.py
apps/api/src/routes/chat/: __init__.py
apps/api/src/routes/chat_sse/: __init__.py
apps/api/src/routes/circuit_breaker/: __init__.py
apps/api/src/routes/client_invitations/: __init__.py
apps/api/src/routes/client_signin/: __init__.py
apps/api/src/routes/comments/: __init__.py
apps/api/src/routes/contract/: __init__.py
apps/api/src/routes/cron/: __init__.py
apps/api/src/routes/decisions/: __init__.py
apps/api/src/routes/dispatcher/: __init__.py
apps/api/src/routes/exec_logs/: __init__.py
apps/api/src/routes/executions/: __init__.py
apps/api/src/routes/impact/: __init__.py
apps/api/src/routes/knowledge/: __init__.py
apps/api/src/routes/mcp_tokens/: __init__.py
apps/api/src/routes/meetings/: __init__.py
apps/api/src/routes/mocks/: __init__.py
apps/api/src/routes/outputs/: __init__.py
apps/api/src/routes/project_credentials/: __init__.py
apps/api/src/routes/projects/: __init__.py
apps/api/src/routes/public/: __init__.py
apps/api/src/routes/sales_docs/: __init__.py
apps/api/src/routes/search/: __init__.py
apps/api/src/routes/skills/: __init__.py
apps/api/src/routes/tasks/: __init__.py
apps/api/src/routes/users/: __init__.py
apps/api/src/routes/workflow/: __init__.py
apps/api/src/routes/workspace_members/: __init__.py
apps/api/src/routes/workspaces/: __init__.py
apps/api/src/schemas/: admin.py  admin_knowledge.py  ai_employees.py  approvals.py  auth.py  byok_keys.py  chat.py  chat_sse.py  circuit_breaker.py  client_invitations.py  client_signin.py  comments.py  contract.py  cron.py  decisions.py  dispatcher.py  exec_logs.py  executions.py  impact.py  knowledge.py  mcp_tokens.py  meetings.py  mocks.py  outputs.py  project_credentials.py  projects.py  public.py  sales_docs.py  search.py  skills.py  storage.py  tasks.py  users.py  workflow.py  workspace_members.py  workspaces.py
apps/api/src/services/admin/: __init__.py
apps/api/src/services/ai_employees/: __init__.py
apps/api/src/services/approvals/: __init__.py
apps/api/src/services/auth/: __init__.py
apps/api/src/services/byok_keys/: __init__.py
apps/api/src/services/chat/: __init__.py
apps/api/src/services/chat_sse/: __init__.py  tools.py
apps/api/src/services/circuit_breaker/: __init__.py
apps/api/src/services/client_invitations/: __init__.py
apps/api/src/services/client_signin/: __init__.py
apps/api/src/tools/: web_search.py
apps/api/src/vault/: __init__.py  byok.py
apps/api/tests/: test_audit_middleware.py  test_audit_writer.py  test_bridge_token.py  test_consent_version_unit.py  test_cron_digest.py  test_cron_digest_unit.py  test_cron_scheduler.py  test_db_base.py  test_db_session.py  test_dependencies.py  test_email_sender.py  test_email_templates.py  test_embeddings_voyage.py  test_graph_workflows.py  test_health.py  test_inngest_config.py  test_kanban_tools.py  test_llm_anthropic.py  test_llm_batch.py  test_llm_caching.py  test_llm_client.py  test_llm_compress.py  test_llm_openai.py  test_mcp_server.py  test_mcp_tools.py  test_observability_sentry.py  test_play_task_unit.py  test_rate_limit.py  test_signin_unit.py  test_t_a_03_marker.py  test_t_a_04_marker.py  test_t_a_05_marker.py  test_vault_byok.py  test_web_search_tool.py  test_workflow_seed_unit.py
apps/api/tests/integration/: __init__.py  _stub.py  t-i-13.py  t-i-14.py  t-i-16.py  t-i-17.py  t-i-18.py
apps/api/tests/rls/: __init__.py  t-d-36_vault.py  t-i-05.py  t-i-06.py  t-i-07.py  t-i-08.py
apps/api/tests/routes/: test_admin.py  test_admin_knowledge.py  test_ai_employees.py  test_approvals.py  test_auth.py  test_byok_keys.py  test_chat.py  test_chat_prompt_cache.py  test_chat_sse.py  test_chat_web_search.py  test_circuit_breaker.py  test_client_invitations.py  test_client_signin.py  test_comments.py  test_contract.py  test_cron.py  test_decisions.py  test_dispatcher.py  test_exec_logs.py  test_executions.py  test_impact.py  test_knowledge.py  test_knowledge_scope_tree.py  test_mcp_tokens.py  test_meetings.py  test_meetings_transcript_url.py  test_meetings_upload_url.py  test_mocks.py  test_mocks_content_url.py  test_outputs.py  test_outputs_content_url.py  test_project_credentials.py  test_projects.py  test_public.py  test_sales_docs.py  test_search.py  test_skills.py  test_tasks.py  test_users_me.py  test_workflow.py  (+2 more)
apps/api/tests/services/: test_chat_tools.py  test_ctx01.py
apps/api/tests/stress/: __init__.py  parallel_10.py  parallel_10_real_postgres.py
(+720 files in other folders)
