[project]
name = "atelier"
version = "0.1.0"
description = "Atelier monorepo Python ツールチェイン設定"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api"]
extend-exclude = [
  ".venv",
  "**/__pycache__",
  "**/.next",
  "**/node_modules",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "TCH", # flake8-type-checking
  "RUF", # ruff specific
]
ignore = [
  "E501",   # line too long (formatter handles)
  "RUF001", # ambiguous chars (日本語の全角句読点を許容)
  "RUF002", # ambiguous chars in docstring
  "RUF003", # ambiguous chars in comment
  "TC003",  # stdlib import in TYPE_CHECKING (実行時に必要なものが多い)
  "TC001",  # type-checking only first-party (同上)
  "TC002",  # type-checking only third-party (同上)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["apps/api"]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/node_modules",
]
pythonVersion = "3.12"
# selected-stack.json#type_checker_backend = "pyright strict"
typeCheckingMode = "strict"
# 外部 SDK (anthropic, sqlalchemy 等) は型 stub 未提供のものがあるため
# 該当カテゴリは緩和。本コード由来の型エラーは strict で検出する。
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["apps/api"]
omit = [
  "**/tests/**",
  "**/__init__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
