[project]
name = "atelier-api"
version = "0.1.0"
description = "Atelier バックエンド（FastAPI + asyncpg + SQLAlchemy 2.0 Core）"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "anthropic>=0.40.0",
  "langgraph>=0.2.60",
  "inngest>=0.4.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# pytest-cov 設定 (apps/api 配下で実行される pytest が読み込む)
# OpenAPI 由来の generated 型 (T-F-25) は Gate #7 で drift 検証されるため
# unit coverage 計測対象外。
[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "**/tests/**",
  "**/__init__.py",
  "**/_generated/**",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
